--- a/WeatherWithAlamofireApp/ViewControllers/Cells/NextDayCell.xib
+++ b/WeatherWithAlamofireApp/ViewControllers/Cells/NextDayCell.xib
@@ -17,32 +17,32 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TkD-lP-s1a">
-                        <rect key="frame" x="0.0" y="27" width="109" height="109"/>
+                        <rect key="frame" x="10" y="23" width="89" height="89"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="TkD-lP-s1a" secondAttribute="height" multiplier="1:1" id="9yL-ia-rfY"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lls-ix-rbL">
-                        <rect key="frame" x="0.0" y="0.0" width="109" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="0.0" y="0.0" width="109" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IW4-zg-Qmx">
-                        <rect key="frame" x="0.0" y="142" width="109" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="0.0" y="118" width="109" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvN-gY-qsM">
-                        <rect key="frame" x="0.0" y="167.5" width="109" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="0.0" y="138.5" width="109" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fK3-PX-WBV">
-                        <rect key="frame" x="0.0" y="194.5" width="109" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="0.0" y="159" width="109" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -50,8 +50,8 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="TkD-lP-s1a" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="5EG-KL-hVE"/>
-                <constraint firstAttribute="trailing" secondItem="TkD-lP-s1a" secondAttribute="trailing" id="77M-7p-FMx"/>
+                <constraint firstItem="TkD-lP-s1a" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="5EG-KL-hVE"/>
+                <constraint firstAttribute="trailing" secondItem="TkD-lP-s1a" secondAttribute="trailing" constant="10" id="77M-7p-FMx"/>
                 <constraint firstItem="bvN-gY-qsM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Gmq-Q0-639"/>
                 <constraint firstItem="fK3-PX-WBV" firstAttribute="top" secondItem="bvN-gY-qsM" secondAttribute="bottom" constant="6" id="IP2-SG-1PB"/>
                 <constraint firstItem="Lls-ix-rbL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Ppl-h6-uIU"/>
@@ -70,7 +70,7 @@
             <connections>
                 <outlet property="dayWeek" destination="Lls-ix-rbL" id="HmQ-fy-pcG"/>
                 <outlet property="maxTempLabel" destination="bvN-gY-qsM" id="pOb-x0-lsa"/>
-                <outlet property="minTempLabels" destination="fK3-PX-WBV" id="xlP-Zg-urE"/>
+                <outlet property="minTempLabel" destination="fK3-PX-WBV" id="xlP-Zg-urE"/>
                 <outlet property="weatherComment" destination="IW4-zg-Qmx" id="bDh-lJ-1fI"/>
                 <outlet property="weatherImage" destination="TkD-lP-s1a" id="OIN-U8-18I"/>
             </connections>
